# Research

./: .gitignore  README.md  lcm.txt  nohup.out  pairsGrid.wkt  pflock.org
.bsp/: scala-cli.json
BFE_Modified/: .gitignore  .gitmodules  AUTHORS.md  CHANGES  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md
BFE_Modified/samples/: README.md
BFE_Modified/samples/buses/: BFE_buses_17-03-06_17-27-14.out  BFE_buses_17-03-06_17-27-14.out.bak  PSI_buses_17-03-06_17-27-14.out.bak  dist_buses.eps  len_buses.eps  nro_buses.eps
BFE_Modified/src/: BasicFlock.cpp  BasicFlock.h  FlockBase.cpp  FlockBase.h  FlockRunner.cpp  FlockRunner.h  flocks.cpp
BFE_Modified/src/arboretum/include/arboretum/: stBasicMetricEvaluators.h  stBasicObjects.h  stMetricHistogram.h  stUserLayerUtil.h
BFE_Modified/src/include/common/: Center.cpp  Center.h  CenterPair.cpp  Cluster.h  FlockAnswer.cpp  FlockAnswer.h  InvertedIndex.hpp  Point.cpp  Point.h  PointPair.cpp  PointPair.h  PointSet.cpp  PointSet.h  definitions.hpp
BFE_Modified/src/include/hash/: Hash.h  MurMurHash.cpp  MurMurHash.h  SpookHash.h
BFE_Modified/src/include/hash/functions/: SpookyV2.cpp  SpookyV2.h
BFE_Modified/src/include/psb/: HashCluster.h  HashPlaneBox.cpp  HashPlaneBox.h  Hashable.hpp  PlaneBox.cpp  PlaneBox.h  PlaneSweep.cpp
BFE_Modified/test/: BFETests.cpp  BasicTests.cpp  CheckClusters.cpp  CommonTests.cpp  PSTests.cpp  TestUtils.cpp  TestUtils.h
BFE_Modified/test/data/: flock.txt
Datasets/: B60K.csv  B80K.csv  Flocks0.txt  Flocks1.txt  Grids.gpkg  Grids.gpkg-shm  Grids.gpkg-wal  LA_50K_T319.tsv  LA_50K_T321.tsv  LA_50K_T322.tsv  LA_50K_T323.tsv  NotFound-BFE_E50_M3_D3_Points.tsv  P0.tsv  P1.tsv  P10K.tsv  P10K.v1.tsv  P10K_W1K_H1K.tsv  P1K.tsv  P2.tsv  P20.tsv  P3.tsv  P39.tsv  P4.tsv  P5.tsv  P518.tsv  P5K.tsv  RandomPoints.gpkg  boxes_sample_dense2.tsv  boxes_sample_dense2_signatures.tsv  demo.tsv  dense.tsv  dense2.csv  dense2.tsv  dense_partitioned.tsv  dense_recode.tsv  dummy.tsv  move_sample.R  points.tsv  recode_dataset.R  sample.tsv  (+31 more)
Docs/: GPS.java  pflock.org  setAWS.txt  setAWS.txt~  setAWS2.txt  setWorker.sh
GeoSpark/: .#build.sbt  .ensime  build.sbt  build.sbt~
Meetings/: cells.qgz
PFlock/: PFLOCK_E50_M3_D3.txt  build.sbt
Validation/: .~lock.Multinode_Scaleup.ods#  B1_expansions.wkt  BFENotFounds_E10.0_M3_D1.tsv  Testing.scala  busesTest.tsv  buses_0_E1.0_M5_D1_PFLOCK.txt  data.tsv  dataset.txt  expansions.wkt  flocks.wkt  grids.wkt  points.tsv  points_E10_M3_D1.tsv  starttimes.csv  trajs.txt
notebooks/: DeltaPlotterBFEvsML.ipynb  EpsilonPlotterBFEvsML.ipynb  MapDataset.ipynb  NohubPlotter.ipynb  NohubPlotter2.ipynb  NohubReader.ipynb  NohubReader2.ipynb  NohubReaderBeakerX.ipynb  NohupBFEReader.ipynb  NohupETL.ipynb  NohupFilterReader.ipynb  NohupMLDeltaReader.ipynb  NohupMLEpsilonReader.ipynb  NohupMLMuReader.ipynb  NohupPlotter.ipynb  NohupPlotterBFE.ipynb  Plot.ipynb  ScalaPlotly.ipynb  SimbaTemplate.ipynb  SimbaTemplate.scala  SpylonBasicExample.ipynb  TableAPI.ipynb  jupyter_example.ipynb  notebook.tex  trajectories.scala  trajectories.scala~
tmp/: 'MergeLastExample.tex'.aux  .Simba.sc.swp  .~lock.Debugging.ods#  AWS_multinode_speedup_001.txt  AWS_multinode_speedup_002.txt  AWS_multinode_speedup_004.txt  BFEPointsNotFound_E10.0_M3_D3.tsv  BFEPointsNotFound_E20_M3_D5.tsv  BFETrajsNotFound_E10.0_M3_D3.tsv  BFETrajsNotFound_E20_M3_D5.tsv  BFE_E20_M3_D5.txt  BrinkhoffTester.sh  BrinkhoffTester2.sh  BrinkhoffTester3.sh  CellInPoly.tex  CirclesFromRadiusAndTwoPointsFinder.py  DBScanTester.sh  DBScan_LA10K.txt  DBScan_LA25K_E5-15.txt  Debugging.ods  DiskVisualizer.py  FF.sh  FFMultiNodeScaleupAWSBenchmarker.sh  FFMultiNodeSpeedupAWSBenchmarker.sh  FF_Scaleup2.scala  FlockEnumerator2.sh  FlockFinderVariantsExamples.dvi  FlockFinderVariantsExamples.tex  ICPETester.sh  ICPE_10K.txt  MF-data_2020-01-30.txt  MF-data_2020-01-31.txt  N.tsv  N1.tsv  N1.tsv~  N2.tsv  N2.tsv~  (+116 more)
(+8829 files in other folders)
